[gd_scene load_steps=10 format=3 uid="uid://bjrpftgh1uapg"]

[ext_resource type="Script" path="res://main.gd" id="1_h72ti"]
[ext_resource type="PackedScene" uid="uid://yvc3fa1htxh2" path="res://player.tscn" id="2_lperh"]
[ext_resource type="PackedScene" uid="uid://clvmvl6uid57n" path="res://snake_body.tscn" id="3_2d2s2"]
[ext_resource type="PackedScene" uid="uid://fv1ipud35v71" path="res://wallv_2.tscn" id="3_km7yj"]
[ext_resource type="PackedScene" uid="uid://cwxokau58mf1l" path="res://apple.tscn" id="4_ctmo3"]
[ext_resource type="PackedScene" uid="uid://bukxg53vu3nwi" path="res://hud.tscn" id="5_k8qxv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hgksg"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_wglpx"]
material = SubResource("StandardMaterial3D_hgksg")
size = Vector3(40, 1, 40)

[sub_resource type="BoxShape3D" id="BoxShape3D_gj10h"]
size = Vector3(40, 1, 40)

[node name="Main" type="Node"]
script = ExtResource("1_h72ti")
apple_scene = ExtResource("4_ctmo3")
snake_body_scene = ExtResource("3_2d2s2")

[node name="Walls" type="Node3D" parent="."]

[node name="Wallv2_1" parent="Walls" instance=ExtResource("3_km7yj")]

[node name="Wallv2" parent="Walls" instance=ExtResource("3_km7yj")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 200, 200)

[node name="Wallv3" parent="Walls" instance=ExtResource("3_km7yj")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 200, -200)

[node name="Wallv4" parent="Walls" instance=ExtResource("3_km7yj")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 200, 200, 0)

[node name="Wallv5" parent="Walls" instance=ExtResource("3_km7yj")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -200, 200, 0)

[node name="Wallv6" parent="Walls" instance=ExtResource("3_km7yj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 400, 0)

[node name="Player" parent="." instance=ExtResource("2_lperh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 92.7852, 0)

[node name="PlayerCamera" type="Camera3D" parent="Player"]
current = true

[node name="Lights" type="Node3D" parent="."]

[node name="OmniLight3D" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 200, 0)
light_energy = 100.0
omni_range = 400.0

[node name="HUD" parent="." instance=ExtResource("5_k8qxv")]

[node name="EE" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 300, -300, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="EE"]
mesh = SubResource("BoxMesh_wglpx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="EE"]
shape = SubResource("BoxShape3D_gj10h")

[node name="Label3D" type="Label3D" parent="EE"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.6, 0)
text = "Wow, you flew all the way here? I'm so honored!"
font_size = 200

[connection signal="body_exited" from="Player" to="." method="_on_player_body_exited"]
[connection signal="delete_body" from="Player" to="." method="_on_player_delete_body"]
[connection signal="game_over" from="Player" to="." method="_on_player_game_over"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="next_body" from="Player" to="." method="_on_player_next_body"]
[connection signal="ready" from="Player" to="." method="_on_player_ready"]
[connection signal="body_entered" from="EE" to="." method="_on_ee_body_entered"]
